// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageValidator has the expected html structure 1`] = `
<div
  class="tm-page page-profile"
  data-title="Validator"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
         
        <!---->
         
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <div
                class="icon-container"
              >
                <img
                  class="icon"
                  src="~assets/images/cosmos-logo.png"
                />
              </div>
               
              <div
                class="total-atoms top-section"
              >
                <h3>
                  Total STAKE
                </h3>
                 
                <h2
                  class="total-atoms__value"
                >
                  123.4568…
                </h2>
              </div>
               
              <div
                class="unbonded-atoms top-section"
              >
                <h3>
                  Available STAKE
                </h3>
                 
                <h2>
                  0.0000…
                </h2>
              </div>
            </div>
             
            <div
              class="short-bech32"
            >
              <div
                class="address"
                id="address"
              >
                
    Address Not Found
  
              </div>
               
              <div
                class="copied"
              >
                <i
                  class="material-icons"
                >
                  check
                </i>
                <span>
                  Copied
                </span>
              </div>
            </div>
             
            <div
              class="tabs"
            />
             
          </div>
           
          <div
            class="tm-tool-bar"
          >
            <a
              class="back"
              disabled="disabled"
            >
              <i
                class="material-icons"
              >
                arrow_back
              </i>
            </a>
             
            <a
              class="help"
            >
              <i
                class="material-icons"
              >
                help_outline
              </i>
            </a>
             
            <router-link-stub
              id="settings"
              to="/preferences"
            >
              <i
                class="material-icons"
              >
                settings
              </i>
            </router-link-stub>
            <a
              id="signOut-btn"
            >
              <i
                class="material-icons"
              >
                exit_to_app
              </i>
            </a>
          </div>
        </div>
      </div>
       
      <menu
        class="tm-page-header-menu"
      >
        <div />
      </menu>
    </div>
  </header>
   
  <main
    class="tm-page-main"
  >
     
    <div
      class="page-profile__header page-profile__section"
    >
      <div
        class="column"
      >
        <img
          class="avatar"
          src="~assets/images/validator-icon.svg"
        />
      </div>
       
      <div
        class="column page-profile__header__info"
      >
        <div
          class="row page-profile__header__name"
        >
          <div
            class="column"
          >
            <div
              class="page-profile__status-and-title"
            >
              <span
                class="page-profile__status green"
              />
               
              <div
                class="page-profile__header__name__title"
              >
                
                herr_schmidt_revoked
              
              </div>
            </div>
             
            <div
              class="short-bech32"
            >
              <div
                class="address"
                id="address"
              >
                
    cosmosvaladdr…8yqw
  
              </div>
               
              <div
                class="copied"
              >
                <i
                  class="material-icons"
                >
                  check
                </i>
                <span>
                  Copied
                </span>
              </div>
            </div>
          </div>
           
          <div
            class="column page-profile__header__actions"
          >
            <button
              class="tm-btn"
              id="delegation-btn"
            >
              <span
                class="tm-btn__container tm-btn--primary"
              >
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Delegate
                </span>
              </span>
            </button>
             
            <button
              class="tm-btn"
              id="undelegation-btn"
            >
              <span
                class="tm-btn__container tm-btn--secondary"
              >
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Undelegate
                </span>
              </span>
            </button>
          </div>
        </div>
         
        <div
          class="row page-profile__header__data"
        >
          <dl
            class="colored_dl"
          >
            <dt>
              Delegated STAKE
            </dt>
             
            <dd>
              
              123.4568…
            
            </dd>
          </dl>
           
          <dl
            class="colored_dl"
          >
            <dt>
              My Rewards
            </dt>
             
            <dd>
              n/a
            </dd>
          </dl>
           
          <div
            class="page-profile__header__data__break"
          />
           
          <dl
            class="colored_dl"
          >
            <dt>
              Voting Power
            </dt>
             
            <dd
              id="page-profile__power"
            >
              65.52 %
            </dd>
          </dl>
           
          <dl
            class="colored_dl"
          >
            <dt>
              Uptime
            </dt>
             
            <dd
              id="page-profile__uptime"
            >
              
              n/a
              %
            
            </dd>
          </dl>
           
          <dl
            class="colored_dl"
          >
            <dt>
              Commission
            </dt>
             
            <dd
              id="page-profile__commission"
            >
              
              0.0500… %
            
            </dd>
          </dl>
           
          <dl
            class="colored_dl"
          >
            <dt>
              Slashes
            </dt>
             
            <dd>
              n/a
            </dd>
          </dl>
        </div>
      </div>
    </div>
     
    <div
      class="page-profile__details page-profile__section"
    >
      <div
        class="row"
      >
        <div
          class="column"
        >
          <dl
            class="info_dl"
          >
            <dt>
              Operator
            </dt>
             
            <dd>
              cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Keybase ID
            </dt>
             
            <dd>
              
              n/a
            
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              First Seen
            </dt>
             
            <dd>
              n/a
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Website
            </dt>
             
            <dd>
              
              www.schmidt.de
            
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Details
            </dt>
             
            <dd
              class="info_dl__text-box"
            >
              
              Herr Schmidt
            
            </dd>
          </dl>
        </div>
         
        <div
          class="column"
        >
          <dl
            class="info_dl"
          >
            <dt>
              Commission Rate
            </dt>
             
            <dd>
              0.05 %
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Max Commission Rate
            </dt>
             
            <dd>
              0.1 %
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Max Daily Commission Change
            </dt>
             
            <dd>
              0.005 %
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Last Commission Change
            </dt>
             
            <dd>
              
              a few seconds ago
            
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Self Delegated STAKE
            </dt>
             
            <dd
              id="page-profile__self-bond"
            >
              1.00 %
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Minimum Self Delegated STAKE
            </dt>
             
            <dd>
              0 %
            </dd>
          </dl>
        </div>
      </div>
    </div>
     
    <!---->
     
    <!---->
     
    <!---->
  </main>
</div>
`;

exports[`PageValidator shows a default avatar 1`] = `
<div
  class="tm-page page-profile"
  data-title="Validator"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
         
        <!---->
         
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <div
                class="icon-container"
              >
                <img
                  class="icon"
                  src="~assets/images/cosmos-logo.png"
                />
              </div>
               
              <div
                class="total-atoms top-section"
              >
                <h3>
                  Total STAKE
                </h3>
                 
                <h2
                  class="total-atoms__value"
                >
                  123.4568…
                </h2>
              </div>
               
              <div
                class="unbonded-atoms top-section"
              >
                <h3>
                  Available STAKE
                </h3>
                 
                <h2>
                  0.0000…
                </h2>
              </div>
            </div>
             
            <div
              class="short-bech32"
            >
              <div
                class="address"
                id="address"
              >
                
    Address Not Found
  
              </div>
               
              <div
                class="copied"
              >
                <i
                  class="material-icons"
                >
                  check
                </i>
                <span>
                  Copied
                </span>
              </div>
            </div>
             
            <div
              class="tabs"
            />
             
          </div>
           
          <div
            class="tm-tool-bar"
          >
            <a
              class="back"
              disabled="disabled"
            >
              <i
                class="material-icons"
              >
                arrow_back
              </i>
            </a>
             
            <a
              class="help"
            >
              <i
                class="material-icons"
              >
                help_outline
              </i>
            </a>
             
            <router-link-stub
              id="settings"
              to="/preferences"
            >
              <i
                class="material-icons"
              >
                settings
              </i>
            </router-link-stub>
            <a
              id="signOut-btn"
            >
              <i
                class="material-icons"
              >
                exit_to_app
              </i>
            </a>
          </div>
        </div>
      </div>
       
      <menu
        class="tm-page-header-menu"
      >
        <div />
      </menu>
    </div>
  </header>
   
  <main
    class="tm-page-main"
  >
     
    <div
      class="page-profile__header page-profile__section"
    >
      <div
        class="column"
      >
        <img
          class="avatar"
          src="~assets/images/validator-icon.svg"
        />
      </div>
       
      <div
        class="column page-profile__header__info"
      >
        <div
          class="row page-profile__header__name"
        >
          <div
            class="column"
          >
            <div
              class="page-profile__status-and-title"
            >
              <span
                class="page-profile__status green"
              />
               
              <div
                class="page-profile__header__name__title"
              >
                
                herr_schmidt_revoked
              
              </div>
            </div>
             
            <div
              class="short-bech32"
            >
              <div
                class="address"
                id="address"
              >
                
    cosmosvaladdr…8yqw
  
              </div>
               
              <div
                class="copied"
              >
                <i
                  class="material-icons"
                >
                  check
                </i>
                <span>
                  Copied
                </span>
              </div>
            </div>
          </div>
           
          <div
            class="column page-profile__header__actions"
          >
            <button
              class="tm-btn"
              id="delegation-btn"
            >
              <span
                class="tm-btn__container tm-btn--primary"
              >
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Delegate
                </span>
              </span>
            </button>
             
            <button
              class="tm-btn"
              id="undelegation-btn"
            >
              <span
                class="tm-btn__container tm-btn--secondary"
              >
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Undelegate
                </span>
              </span>
            </button>
          </div>
        </div>
         
        <div
          class="row page-profile__header__data"
        >
          <dl
            class="colored_dl"
          >
            <dt>
              Delegated STAKE
            </dt>
             
            <dd>
              
              123.4568…
            
            </dd>
          </dl>
           
          <dl
            class="colored_dl"
          >
            <dt>
              My Rewards
            </dt>
             
            <dd>
              n/a
            </dd>
          </dl>
           
          <div
            class="page-profile__header__data__break"
          />
           
          <dl
            class="colored_dl"
          >
            <dt>
              Voting Power
            </dt>
             
            <dd
              id="page-profile__power"
            >
              65.52 %
            </dd>
          </dl>
           
          <dl
            class="colored_dl"
          >
            <dt>
              Uptime
            </dt>
             
            <dd
              id="page-profile__uptime"
            >
              
              n/a
              %
            
            </dd>
          </dl>
           
          <dl
            class="colored_dl"
          >
            <dt>
              Commission
            </dt>
             
            <dd
              id="page-profile__commission"
            >
              
              0.0500… %
            
            </dd>
          </dl>
           
          <dl
            class="colored_dl"
          >
            <dt>
              Slashes
            </dt>
             
            <dd>
              n/a
            </dd>
          </dl>
        </div>
      </div>
    </div>
     
    <div
      class="page-profile__details page-profile__section"
    >
      <div
        class="row"
      >
        <div
          class="column"
        >
          <dl
            class="info_dl"
          >
            <dt>
              Operator
            </dt>
             
            <dd>
              cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Keybase ID
            </dt>
             
            <dd>
              
              n/a
            
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              First Seen
            </dt>
             
            <dd>
              n/a
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Website
            </dt>
             
            <dd>
              
              www.schmidt.de
            
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Details
            </dt>
             
            <dd
              class="info_dl__text-box"
            >
              
              Herr Schmidt
            
            </dd>
          </dl>
        </div>
         
        <div
          class="column"
        >
          <dl
            class="info_dl"
          >
            <dt>
              Commission Rate
            </dt>
             
            <dd>
              0.05 %
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Max Commission Rate
            </dt>
             
            <dd>
              0.1 %
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Max Daily Commission Change
            </dt>
             
            <dd>
              0.005 %
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Last Commission Change
            </dt>
             
            <dd>
              
              a few seconds ago
            
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Self Delegated STAKE
            </dt>
             
            <dd
              id="page-profile__self-bond"
            >
              1.00 %
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Minimum Self Delegated STAKE
            </dt>
             
            <dd>
              0 %
            </dd>
          </dl>
        </div>
      </div>
    </div>
     
    <!---->
     
    <!---->
     
    <!---->
  </main>
</div>
`;

exports[`PageValidator shows a validator as candidate if he has no voting_power 1`] = `"This validator does not have enough voting power yet and is inactive"`;

exports[`PageValidator shows an error if the validator couldn't be found 1`] = `
<div
  class="tm-page page-profile"
  data-title="Validator"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
         
        <!---->
         
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <div
                class="icon-container"
              >
                <img
                  class="icon"
                  src="~assets/images/cosmos-logo.png"
                />
              </div>
               
              <div
                class="total-atoms top-section"
              >
                <h3>
                  Total STAKE
                </h3>
                 
                <h2
                  class="total-atoms__value"
                >
                  0.0000…
                </h2>
              </div>
               
              <div
                class="unbonded-atoms top-section"
              >
                <h3>
                  Available STAKE
                </h3>
                 
                <h2>
                  0.0000…
                </h2>
              </div>
            </div>
             
            <div
              class="short-bech32"
            >
              <div
                class="address"
                id="address"
              >
                
    Address Not Found
  
              </div>
               
              <div
                class="copied"
              >
                <i
                  class="material-icons"
                >
                  check
                </i>
                <span>
                  Copied
                </span>
              </div>
            </div>
             
            <div
              class="tabs"
            />
             
          </div>
           
          <div
            class="tm-tool-bar"
          >
            <a
              class="back"
              disabled="disabled"
            >
              <i
                class="material-icons"
              >
                arrow_back
              </i>
            </a>
             
            <a
              class="help"
            >
              <i
                class="material-icons"
              >
                help_outline
              </i>
            </a>
             
            <router-link-stub
              id="settings"
              to="/preferences"
            >
              <i
                class="material-icons"
              >
                settings
              </i>
            </router-link-stub>
            <a
              id="signOut-btn"
            >
              <i
                class="material-icons"
              >
                exit_to_app
              </i>
            </a>
          </div>
        </div>
      </div>
       
      <menu
        class="tm-page-header-menu"
      >
        <div />
      </menu>
    </div>
  </header>
   
  <main
    class="tm-page-main"
  >
     
    <div
      class="tm-data-msg"
    >
      <div
        class="tm-data-msg__icon"
      >
        <i
          class="material-icons"
        >
          sentiment_very_dissatisfied
        </i>
      </div>
       
      <div
        class="tm-data-msg__text"
      >
        <div
          class="tm-data-msg__title"
        >
          <div>
            Aw shucks!
          </div>
        </div>
         
        <div
          class="tm-data-msg__subtitle"
        >
          <div>
            
    Even though you're connected a full node, we can't display this data for
    you right now. Please try again later or
    
            <a
              href="https://github.com/cosmos/voyager/issues"
            >
              file a bug report
            </a>
            .
    Apologies!
  
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`PageValidator shows that a validator is revoked 1`] = `"This validator has been jailed and is not currently validating"`;

exports[`delegationTargetOptions always shows wallet in the first position 1`] = `
Array [
  Object {
    "address": "cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9",
    "key": "My Wallet - cosmos…3p4mqpjyrm5ctpesxxn9",
    "maximum": 50,
    "value": 0,
  },
]
`;

exports[`delegationTargetOptions hides displayed validator if bonded 1`] = `
Array [
  Object {
    "address": "cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9",
    "key": "My Wallet - cosmos…3p4mqpjyrm5ctpesxxn9",
    "maximum": 50,
    "value": 0,
  },
]
`;

exports[`delegationTargetOptions shows bonded validators for redelegation options 1`] = `
Array [
  Object {
    "address": "cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9",
    "key": "My Wallet - cosmos…3p4mqpjyrm5ctpesxxn9",
    "maximum": 50,
    "value": 0,
  },
  Object {
    "address": "cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctplpn3au",
    "key": "good_greg - cosmosvaladdr…3p4mqpjyrm5ctplpn3au",
    "maximum": 5,
    "value": 1,
  },
]
`;

exports[`onDelegation make sure we have enough atoms to delegate is not enough 1`] = `
<div
  class="tm-page page-profile"
  data-title="Validator"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
         
        <!---->
         
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <div
                class="icon-container"
              >
                <img
                  class="icon"
                  src="~assets/images/cosmos-logo.png"
                />
              </div>
               
              <div
                class="total-atoms top-section"
              >
                <h3>
                  Total STAKE
                </h3>
                 
                <h2
                  class="total-atoms__value"
                >
                  100.0000…
                </h2>
              </div>
               
              <div
                class="unbonded-atoms top-section"
              >
                <h3>
                  Available STAKE
                </h3>
                 
                <h2>
                  0.0000…
                </h2>
              </div>
            </div>
             
            <div
              class="short-bech32"
            >
              <div
                class="address"
                id="address"
              >
                
    Address Not Found
  
              </div>
               
              <div
                class="copied"
              >
                <i
                  class="material-icons"
                >
                  check
                </i>
                <span>
                  Copied
                </span>
              </div>
            </div>
             
            <div
              class="tabs"
            />
             
          </div>
           
          <div
            class="tm-tool-bar"
          >
            <a
              class="back"
              disabled="disabled"
            >
              <i
                class="material-icons"
              >
                arrow_back
              </i>
            </a>
             
            <a
              class="help"
            >
              <i
                class="material-icons"
              >
                help_outline
              </i>
            </a>
             
            <router-link-stub
              id="settings"
              to="/preferences"
            >
              <i
                class="material-icons"
              >
                settings
              </i>
            </router-link-stub>
            <a
              id="signOut-btn"
            >
              <i
                class="material-icons"
              >
                exit_to_app
              </i>
            </a>
          </div>
        </div>
      </div>
       
      <menu
        class="tm-page-header-menu"
      >
        <div />
      </menu>
    </div>
  </header>
   
  <main
    class="tm-page-main"
  >
     
    <div
      class="page-profile__header page-profile__section"
    >
      <div
        class="column"
      >
        <img
          class="avatar"
          src="~assets/images/validator-icon.svg"
        />
      </div>
       
      <div
        class="column page-profile__header__info"
      >
        <div
          class="row page-profile__header__name"
        >
          <div
            class="column"
          >
            <div
              class="page-profile__status-and-title"
            >
              <span
                class="page-profile__status green"
              />
               
              <div
                class="page-profile__header__name__title"
              >
                
                herr_schmidt_revoked
              
              </div>
            </div>
             
            <div
              class="short-bech32"
            >
              <div
                class="address"
                id="address"
              >
                
    cosmosvaladdr…8yqw
  
              </div>
               
              <div
                class="copied"
              >
                <i
                  class="material-icons"
                >
                  check
                </i>
                <span>
                  Copied
                </span>
              </div>
            </div>
          </div>
           
          <div
            class="column page-profile__header__actions"
          >
            <button
              class="tm-btn"
              id="delegation-btn"
            >
              <span
                class="tm-btn__container tm-btn--primary"
              >
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Delegate
                </span>
              </span>
            </button>
             
            <button
              class="tm-btn"
              id="undelegation-btn"
            >
              <span
                class="tm-btn__container tm-btn--secondary"
              >
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Undelegate
                </span>
              </span>
            </button>
          </div>
        </div>
         
        <div
          class="row page-profile__header__data"
        >
          <dl
            class="colored_dl"
          >
            <dt>
              Delegated STAKE
            </dt>
             
            <dd>
              
              100.0000…
            
            </dd>
          </dl>
           
          <dl
            class="colored_dl"
          >
            <dt>
              My Rewards
            </dt>
             
            <dd>
              n/a
            </dd>
          </dl>
           
          <div
            class="page-profile__header__data__break"
          />
           
          <dl
            class="colored_dl"
          >
            <dt>
              Voting Power
            </dt>
             
            <dd
              id="page-profile__power"
            >
              65.52 %
            </dd>
          </dl>
           
          <dl
            class="colored_dl"
          >
            <dt>
              Uptime
            </dt>
             
            <dd
              id="page-profile__uptime"
            >
              
              n/a
              %
            
            </dd>
          </dl>
           
          <dl
            class="colored_dl"
          >
            <dt>
              Commission
            </dt>
             
            <dd
              id="page-profile__commission"
            >
              
              0.0500… %
            
            </dd>
          </dl>
           
          <dl
            class="colored_dl"
          >
            <dt>
              Slashes
            </dt>
             
            <dd>
              n/a
            </dd>
          </dl>
        </div>
      </div>
    </div>
     
    <div
      class="page-profile__details page-profile__section"
    >
      <div
        class="row"
      >
        <div
          class="column"
        >
          <dl
            class="info_dl"
          >
            <dt>
              Operator
            </dt>
             
            <dd>
              cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Keybase ID
            </dt>
             
            <dd>
              
              n/a
            
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              First Seen
            </dt>
             
            <dd>
              n/a
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Website
            </dt>
             
            <dd>
              
              www.schmidt.de
            
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Details
            </dt>
             
            <dd
              class="info_dl__text-box"
            >
              
              Herr Schmidt
            
            </dd>
          </dl>
        </div>
         
        <div
          class="column"
        >
          <dl
            class="info_dl"
          >
            <dt>
              Commission Rate
            </dt>
             
            <dd>
              0.05 %
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Max Commission Rate
            </dt>
             
            <dd>
              0.1 %
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Max Daily Commission Change
            </dt>
             
            <dd>
              0.005 %
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Last Commission Change
            </dt>
             
            <dd>
              
              a few seconds ago
            
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Self Delegated STAKE
            </dt>
             
            <dd
              id="page-profile__self-bond"
            >
              1.00 %
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Minimum Self Delegated STAKE
            </dt>
             
            <dd>
              0 %
            </dd>
          </dl>
        </div>
      </div>
    </div>
     
    <!---->
     
    <!---->
     
    <div
      class="tm-modal"
    >
      <div
        class="tm-modal-container"
      >
        <header
          class="tm-modal-header"
        >
          <!---->
           
          <div
            class="tm-modal-title"
          >
            <div>
              
        Cannot Delegate
      
            </div>
          </div>
           
          <div
            class="tm-modal-icon tm-modal-close"
          >
            <i
              class="material-icons"
            >
              close
            </i>
          </div>
        </header>
         
        <main
          class="tm-modal-main"
        >
           
          <p>
            
        You have no STAKEs
         to
         delegate.
      
          </p>
            
          <footer
            class="tm-modal-footer"
          >
            <div>
              <button
                class="tm-btn"
                id="no-atoms-modal__btn"
              >
                <span
                  class="tm-btn__container"
                >
                  <!---->
                  <span
                    class="tm-btn__value"
                  >
                    OK
                  </span>
                </span>
              </button>
            </div>
          </footer>
        </main>
      </div>
    </div>
  </main>
</div>
`;

exports[`onDelegation make sure we have enough atoms to delegate is not enough 2`] = `
<div
  class="tm-page page-profile"
  data-title="Validator"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
         
        <!---->
         
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <div
                class="icon-container"
              >
                <img
                  class="icon"
                  src="~assets/images/cosmos-logo.png"
                />
              </div>
               
              <div
                class="total-atoms top-section"
              >
                <h3>
                  Total STAKE
                </h3>
                 
                <h2
                  class="total-atoms__value"
                >
                  100.0000…
                </h2>
              </div>
               
              <div
                class="unbonded-atoms top-section"
              >
                <h3>
                  Available STAKE
                </h3>
                 
                <h2>
                  0.0000…
                </h2>
              </div>
            </div>
             
            <div
              class="short-bech32"
            >
              <div
                class="address"
                id="address"
              >
                
    Address Not Found
  
              </div>
               
              <div
                class="copied"
              >
                <i
                  class="material-icons"
                >
                  check
                </i>
                <span>
                  Copied
                </span>
              </div>
            </div>
             
            <div
              class="tabs"
            />
             
          </div>
           
          <div
            class="tm-tool-bar"
          >
            <a
              class="back"
              disabled="disabled"
            >
              <i
                class="material-icons"
              >
                arrow_back
              </i>
            </a>
             
            <a
              class="help"
            >
              <i
                class="material-icons"
              >
                help_outline
              </i>
            </a>
             
            <router-link-stub
              id="settings"
              to="/preferences"
            >
              <i
                class="material-icons"
              >
                settings
              </i>
            </router-link-stub>
            <a
              id="signOut-btn"
            >
              <i
                class="material-icons"
              >
                exit_to_app
              </i>
            </a>
          </div>
        </div>
      </div>
       
      <menu
        class="tm-page-header-menu"
      >
        <div />
      </menu>
    </div>
  </header>
   
  <main
    class="tm-page-main"
  >
     
    <div
      class="page-profile__header page-profile__section"
    >
      <div
        class="column"
      >
        <img
          class="avatar"
          src="~assets/images/validator-icon.svg"
        />
      </div>
       
      <div
        class="column page-profile__header__info"
      >
        <div
          class="row page-profile__header__name"
        >
          <div
            class="column"
          >
            <div
              class="page-profile__status-and-title"
            >
              <span
                class="page-profile__status green"
              />
               
              <div
                class="page-profile__header__name__title"
              >
                
                herr_schmidt_revoked
              
              </div>
            </div>
             
            <div
              class="short-bech32"
            >
              <div
                class="address"
                id="address"
              >
                
    cosmosvaladdr…8yqw
  
              </div>
               
              <div
                class="copied"
              >
                <i
                  class="material-icons"
                >
                  check
                </i>
                <span>
                  Copied
                </span>
              </div>
            </div>
          </div>
           
          <div
            class="column page-profile__header__actions"
          >
            <button
              class="tm-btn"
              id="delegation-btn"
            >
              <span
                class="tm-btn__container tm-btn--primary"
              >
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Delegate
                </span>
              </span>
            </button>
             
            <button
              class="tm-btn"
              id="undelegation-btn"
            >
              <span
                class="tm-btn__container tm-btn--secondary"
              >
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Undelegate
                </span>
              </span>
            </button>
          </div>
        </div>
         
        <div
          class="row page-profile__header__data"
        >
          <dl
            class="colored_dl"
          >
            <dt>
              Delegated STAKE
            </dt>
             
            <dd>
              
              100.0000…
            
            </dd>
          </dl>
           
          <dl
            class="colored_dl"
          >
            <dt>
              My Rewards
            </dt>
             
            <dd>
              n/a
            </dd>
          </dl>
           
          <div
            class="page-profile__header__data__break"
          />
           
          <dl
            class="colored_dl"
          >
            <dt>
              Voting Power
            </dt>
             
            <dd
              id="page-profile__power"
            >
              65.52 %
            </dd>
          </dl>
           
          <dl
            class="colored_dl"
          >
            <dt>
              Uptime
            </dt>
             
            <dd
              id="page-profile__uptime"
            >
              
              n/a
              %
            
            </dd>
          </dl>
           
          <dl
            class="colored_dl"
          >
            <dt>
              Commission
            </dt>
             
            <dd
              id="page-profile__commission"
            >
              
              0.0500… %
            
            </dd>
          </dl>
           
          <dl
            class="colored_dl"
          >
            <dt>
              Slashes
            </dt>
             
            <dd>
              n/a
            </dd>
          </dl>
        </div>
      </div>
    </div>
     
    <div
      class="page-profile__details page-profile__section"
    >
      <div
        class="row"
      >
        <div
          class="column"
        >
          <dl
            class="info_dl"
          >
            <dt>
              Operator
            </dt>
             
            <dd>
              cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Keybase ID
            </dt>
             
            <dd>
              
              n/a
            
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              First Seen
            </dt>
             
            <dd>
              n/a
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Website
            </dt>
             
            <dd>
              
              www.schmidt.de
            
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Details
            </dt>
             
            <dd
              class="info_dl__text-box"
            >
              
              Herr Schmidt
            
            </dd>
          </dl>
        </div>
         
        <div
          class="column"
        >
          <dl
            class="info_dl"
          >
            <dt>
              Commission Rate
            </dt>
             
            <dd>
              0.05 %
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Max Commission Rate
            </dt>
             
            <dd>
              0.1 %
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Max Daily Commission Change
            </dt>
             
            <dd>
              0.005 %
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Last Commission Change
            </dt>
             
            <dd>
              
              a few seconds ago
            
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Self Delegated STAKE
            </dt>
             
            <dd
              id="page-profile__self-bond"
            >
              1.00 %
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Minimum Self Delegated STAKE
            </dt>
             
            <dd>
              0 %
            </dd>
          </dl>
        </div>
      </div>
    </div>
     
    <!---->
     
    <!---->
     
    <!---->
  </main>
</div>
`;

exports[`onDelegation onUnstake make sure there are enough atoms to unstake is not enough 1`] = `
<div
  class="tm-page page-profile"
  data-title="Validator"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
         
        <!---->
         
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <div
                class="icon-container"
              >
                <img
                  class="icon"
                  src="~assets/images/cosmos-logo.png"
                />
              </div>
               
              <div
                class="total-atoms top-section"
              >
                <h3>
                  Total STAKE
                </h3>
                 
                <h2
                  class="total-atoms__value"
                >
                  1,337.0000…
                </h2>
              </div>
               
              <div
                class="unbonded-atoms top-section"
              >
                <h3>
                  Available STAKE
                </h3>
                 
                <h2>
                  1,337.0000…
                </h2>
              </div>
            </div>
             
            <div
              class="short-bech32"
            >
              <div
                class="address"
                id="address"
              >
                
    Address Not Found
  
              </div>
               
              <div
                class="copied"
              >
                <i
                  class="material-icons"
                >
                  check
                </i>
                <span>
                  Copied
                </span>
              </div>
            </div>
             
            <div
              class="tabs"
            />
             
          </div>
           
          <div
            class="tm-tool-bar"
          >
            <a
              class="back"
              disabled="disabled"
            >
              <i
                class="material-icons"
              >
                arrow_back
              </i>
            </a>
             
            <a
              class="help"
            >
              <i
                class="material-icons"
              >
                help_outline
              </i>
            </a>
             
            <router-link-stub
              id="settings"
              to="/preferences"
            >
              <i
                class="material-icons"
              >
                settings
              </i>
            </router-link-stub>
            <a
              id="signOut-btn"
            >
              <i
                class="material-icons"
              >
                exit_to_app
              </i>
            </a>
          </div>
        </div>
      </div>
       
      <menu
        class="tm-page-header-menu"
      >
        <div />
      </menu>
    </div>
  </header>
   
  <main
    class="tm-page-main"
  >
     
    <div
      class="page-profile__header page-profile__section"
    >
      <div
        class="column"
      >
        <img
          class="avatar"
          src="~assets/images/validator-icon.svg"
        />
      </div>
       
      <div
        class="column page-profile__header__info"
      >
        <div
          class="row page-profile__header__name"
        >
          <div
            class="column"
          >
            <div
              class="page-profile__status-and-title"
            >
              <span
                class="page-profile__status green"
              />
               
              <div
                class="page-profile__header__name__title"
              >
                
                herr_schmidt_revoked
              
              </div>
            </div>
             
            <div
              class="short-bech32"
            >
              <div
                class="address"
                id="address"
              >
                
    cosmosvaladdr…8yqw
  
              </div>
               
              <div
                class="copied"
              >
                <i
                  class="material-icons"
                >
                  check
                </i>
                <span>
                  Copied
                </span>
              </div>
            </div>
          </div>
           
          <div
            class="column page-profile__header__actions"
          >
            <button
              class="tm-btn"
              id="delegation-btn"
            >
              <span
                class="tm-btn__container tm-btn--primary"
              >
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Delegate
                </span>
              </span>
            </button>
             
            <button
              class="tm-btn"
              id="undelegation-btn"
            >
              <span
                class="tm-btn__container tm-btn--secondary"
              >
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Undelegate
                </span>
              </span>
            </button>
          </div>
        </div>
         
        <div
          class="row page-profile__header__data"
        >
          <dl
            class="colored_dl"
          >
            <dt>
              Delegated STAKE
            </dt>
             
            <dd>
              
              0.0000…
            
            </dd>
          </dl>
           
          <dl
            class="colored_dl"
          >
            <dt>
              My Rewards
            </dt>
             
            <dd>
              n/a
            </dd>
          </dl>
           
          <div
            class="page-profile__header__data__break"
          />
           
          <dl
            class="colored_dl"
          >
            <dt>
              Voting Power
            </dt>
             
            <dd
              id="page-profile__power"
            >
              65.52 %
            </dd>
          </dl>
           
          <dl
            class="colored_dl"
          >
            <dt>
              Uptime
            </dt>
             
            <dd
              id="page-profile__uptime"
            >
              
              n/a
              %
            
            </dd>
          </dl>
           
          <dl
            class="colored_dl"
          >
            <dt>
              Commission
            </dt>
             
            <dd
              id="page-profile__commission"
            >
              
              0.0500… %
            
            </dd>
          </dl>
           
          <dl
            class="colored_dl"
          >
            <dt>
              Slashes
            </dt>
             
            <dd>
              n/a
            </dd>
          </dl>
        </div>
      </div>
    </div>
     
    <div
      class="page-profile__details page-profile__section"
    >
      <div
        class="row"
      >
        <div
          class="column"
        >
          <dl
            class="info_dl"
          >
            <dt>
              Operator
            </dt>
             
            <dd>
              cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Keybase ID
            </dt>
             
            <dd>
              
              n/a
            
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              First Seen
            </dt>
             
            <dd>
              n/a
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Website
            </dt>
             
            <dd>
              
              www.schmidt.de
            
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Details
            </dt>
             
            <dd
              class="info_dl__text-box"
            >
              
              Herr Schmidt
            
            </dd>
          </dl>
        </div>
         
        <div
          class="column"
        >
          <dl
            class="info_dl"
          >
            <dt>
              Commission Rate
            </dt>
             
            <dd>
              0.05 %
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Max Commission Rate
            </dt>
             
            <dd>
              0.1 %
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Max Daily Commission Change
            </dt>
             
            <dd>
              0.005 %
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Last Commission Change
            </dt>
             
            <dd>
              
              a few seconds ago
            
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Self Delegated STAKE
            </dt>
             
            <dd
              id="page-profile__self-bond"
            >
              1.00 %
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Minimum Self Delegated STAKE
            </dt>
             
            <dd>
              0 %
            </dd>
          </dl>
        </div>
      </div>
    </div>
     
    <!---->
     
    <!---->
     
    <div
      class="tm-modal"
    >
      <div
        class="tm-modal-container"
      >
        <header
          class="tm-modal-header"
        >
          <!---->
           
          <div
            class="tm-modal-title"
          >
            <div>
              
        Cannot Undelegate
      
            </div>
          </div>
           
          <div
            class="tm-modal-icon tm-modal-close"
          >
            <i
              class="material-icons"
            >
              close
            </i>
          </div>
        </header>
         
        <main
          class="tm-modal-main"
        >
           
          <p>
            
        You have no STAKEs
         delegated to
         this validator.
      
          </p>
            
          <footer
            class="tm-modal-footer"
          >
            <div>
              <button
                class="tm-btn"
                id="no-atoms-modal__btn"
              >
                <span
                  class="tm-btn__container"
                >
                  <!---->
                  <span
                    class="tm-btn__value"
                  >
                    OK
                  </span>
                </span>
              </button>
            </div>
          </footer>
        </main>
      </div>
    </div>
  </main>
</div>
`;

exports[`onDelegation onUnstake make sure there are enough atoms to unstake is not enough 2`] = `
<div
  class="tm-page page-profile"
  data-title="Validator"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
         
        <!---->
         
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <div
                class="icon-container"
              >
                <img
                  class="icon"
                  src="~assets/images/cosmos-logo.png"
                />
              </div>
               
              <div
                class="total-atoms top-section"
              >
                <h3>
                  Total STAKE
                </h3>
                 
                <h2
                  class="total-atoms__value"
                >
                  1,337.0000…
                </h2>
              </div>
               
              <div
                class="unbonded-atoms top-section"
              >
                <h3>
                  Available STAKE
                </h3>
                 
                <h2>
                  1,337.0000…
                </h2>
              </div>
            </div>
             
            <div
              class="short-bech32"
            >
              <div
                class="address"
                id="address"
              >
                
    Address Not Found
  
              </div>
               
              <div
                class="copied"
              >
                <i
                  class="material-icons"
                >
                  check
                </i>
                <span>
                  Copied
                </span>
              </div>
            </div>
             
            <div
              class="tabs"
            />
             
          </div>
           
          <div
            class="tm-tool-bar"
          >
            <a
              class="back"
              disabled="disabled"
            >
              <i
                class="material-icons"
              >
                arrow_back
              </i>
            </a>
             
            <a
              class="help"
            >
              <i
                class="material-icons"
              >
                help_outline
              </i>
            </a>
             
            <router-link-stub
              id="settings"
              to="/preferences"
            >
              <i
                class="material-icons"
              >
                settings
              </i>
            </router-link-stub>
            <a
              id="signOut-btn"
            >
              <i
                class="material-icons"
              >
                exit_to_app
              </i>
            </a>
          </div>
        </div>
      </div>
       
      <menu
        class="tm-page-header-menu"
      >
        <div />
      </menu>
    </div>
  </header>
   
  <main
    class="tm-page-main"
  >
     
    <div
      class="page-profile__header page-profile__section"
    >
      <div
        class="column"
      >
        <img
          class="avatar"
          src="~assets/images/validator-icon.svg"
        />
      </div>
       
      <div
        class="column page-profile__header__info"
      >
        <div
          class="row page-profile__header__name"
        >
          <div
            class="column"
          >
            <div
              class="page-profile__status-and-title"
            >
              <span
                class="page-profile__status green"
              />
               
              <div
                class="page-profile__header__name__title"
              >
                
                herr_schmidt_revoked
              
              </div>
            </div>
             
            <div
              class="short-bech32"
            >
              <div
                class="address"
                id="address"
              >
                
    cosmosvaladdr…8yqw
  
              </div>
               
              <div
                class="copied"
              >
                <i
                  class="material-icons"
                >
                  check
                </i>
                <span>
                  Copied
                </span>
              </div>
            </div>
          </div>
           
          <div
            class="column page-profile__header__actions"
          >
            <button
              class="tm-btn"
              id="delegation-btn"
            >
              <span
                class="tm-btn__container tm-btn--primary"
              >
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Delegate
                </span>
              </span>
            </button>
             
            <button
              class="tm-btn"
              id="undelegation-btn"
            >
              <span
                class="tm-btn__container tm-btn--secondary"
              >
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Undelegate
                </span>
              </span>
            </button>
          </div>
        </div>
         
        <div
          class="row page-profile__header__data"
        >
          <dl
            class="colored_dl"
          >
            <dt>
              Delegated STAKE
            </dt>
             
            <dd>
              
              0.0000…
            
            </dd>
          </dl>
           
          <dl
            class="colored_dl"
          >
            <dt>
              My Rewards
            </dt>
             
            <dd>
              n/a
            </dd>
          </dl>
           
          <div
            class="page-profile__header__data__break"
          />
           
          <dl
            class="colored_dl"
          >
            <dt>
              Voting Power
            </dt>
             
            <dd
              id="page-profile__power"
            >
              65.52 %
            </dd>
          </dl>
           
          <dl
            class="colored_dl"
          >
            <dt>
              Uptime
            </dt>
             
            <dd
              id="page-profile__uptime"
            >
              
              n/a
              %
            
            </dd>
          </dl>
           
          <dl
            class="colored_dl"
          >
            <dt>
              Commission
            </dt>
             
            <dd
              id="page-profile__commission"
            >
              
              0.0500… %
            
            </dd>
          </dl>
           
          <dl
            class="colored_dl"
          >
            <dt>
              Slashes
            </dt>
             
            <dd>
              n/a
            </dd>
          </dl>
        </div>
      </div>
    </div>
     
    <div
      class="page-profile__details page-profile__section"
    >
      <div
        class="row"
      >
        <div
          class="column"
        >
          <dl
            class="info_dl"
          >
            <dt>
              Operator
            </dt>
             
            <dd>
              cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Keybase ID
            </dt>
             
            <dd>
              
              n/a
            
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              First Seen
            </dt>
             
            <dd>
              n/a
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Website
            </dt>
             
            <dd>
              
              www.schmidt.de
            
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Details
            </dt>
             
            <dd
              class="info_dl__text-box"
            >
              
              Herr Schmidt
            
            </dd>
          </dl>
        </div>
         
        <div
          class="column"
        >
          <dl
            class="info_dl"
          >
            <dt>
              Commission Rate
            </dt>
             
            <dd>
              0.05 %
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Max Commission Rate
            </dt>
             
            <dd>
              0.1 %
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Max Daily Commission Change
            </dt>
             
            <dd>
              0.005 %
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Last Commission Change
            </dt>
             
            <dd>
              
              a few seconds ago
            
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Self Delegated STAKE
            </dt>
             
            <dd
              id="page-profile__self-bond"
            >
              1.00 %
            </dd>
          </dl>
           
          <dl
            class="info_dl"
          >
            <dt>
              Minimum Self Delegated STAKE
            </dt>
             
            <dd>
              0 %
            </dd>
          </dl>
        </div>
      </div>
    </div>
     
    <!---->
     
    <!---->
     
    <!---->
  </main>
</div>
`;
